[package]
name = "psp-wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.80", default-features = false }
psp = "0.3.7"
wasmi = { version = "0.31.2", default-features = false }
